# alkahest-engine

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  ROADMAP.md
cmake/: APIExportFlags.cmake  CompilerSanitizers.cmake  Doxygen.cmake
include/: alkahest-server.h  alkahest.h
lib/stb/: CMakeLists.txt  stb_image.h
src/: macros.h  pch.h
src/ecs/: README.md  common.h  entity.h
src/ecs/components/: _base.h  include.h  transform.h
src/ecs/managers/: componentmanager.h  ecsmanager.cpp  ecsmanager.h  entitymanager.h  systemmanager.h
src/ecs/systems/: _base.h  include.h
src/init/: application.cpp  application.h  entrypoint.h
src/net/: client.h  common.h  connection.h  message.h  queue.h  server.h
src/renderer/: common.h  model.h  text.h  texture.h  transform.h
src/renderer/opengl/: model.cpp  model.h  text.cpp  text.h  texture.cpp  texture.h
src/sys/events/: event.h  eventqueue.cpp  eventqueue.h  keyevent.h  mouseevent.h  windowevent.h
src/sys/input/: input.cpp  input.h  keys.h  openglinput.cpp  openglinput.h
src/sys/log/: log.cpp  log.h
src/sys/render/: buffer.h  camera.h  mesh.h  shader.h  texture.h  vertexarray.h
src/sys/render/opengl/: buffer.cpp  buffer.h  camera.cpp  camera.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h
src/sys/render/opengl/shaders/: default.frag  default.vert  text.frag
src/sys/window/: openglwindow.cpp  openglwindow.h  window.h
src/util/importers/: modelimporter.cpp  modelimporter.h
